// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todos GraphQL Query & Mutation 1`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "1",
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 2`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "2",
      "id": "VXNlcjo5",
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 3`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "3",
      "todoEdge": Object {
        "cursor": "MTY=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxNg==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 4`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "3",
      "todoEdge": Object {
        "cursor": "MTc=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxNw==",
          "text": "Get A Customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 5`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "3",
      "todoEdge": Object {
        "cursor": "MTg=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxOA==",
          "text": "Get A Customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 6`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 25,
          "line": 7,
        },
      ],
      "message": "Variable \\"$status\\" of type \\"String\\" used in position expecting type \\"Status\\".",
    },
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 55,
          "line": 7,
        },
      ],
      "message": "Variable \\"$last\\" of type \\"String\\" used in position expecting type \\"Int\\".",
    },
  ],
}
`;

exports[`Todos GraphQL Query & Mutation 7`] = `
Object {
  "data": Object {
    "markAllTodos": Object {
      "changedTodos": Array [
        Object {
          "complete": true,
          "id": "VG9kbzoxNg==",
          "text": "Get A Customer 1",
        },
        Object {
          "complete": true,
          "id": "VG9kbzoxNw==",
          "text": "Get A Customer 2",
        },
        Object {
          "complete": true,
          "id": "VG9kbzoxOA==",
          "text": "Get A Customer 3",
        },
      ],
      "clientMutationId": "4",
      "user": Object {
        "completedCount": 3,
        "id": "VXNlcjo5",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 8`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "5 0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxNg==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user@test.com",
        "id": "VXNlcjo5",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 9`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "5 1",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxNw==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user@test.com",
        "id": "VXNlcjo5",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 10`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "5 2",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxOA==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "id": "VXNlcjo5",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 11`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "6 0",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxNg==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user@test.com",
        "id": "VXNlcjo5",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 12`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "6 1",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxNw==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user@test.com",
        "id": "VXNlcjo5",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 13`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "6 2",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxOA==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 3,
        "email": "user@test.com",
        "id": "VXNlcjo5",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 14`] = `
Object {
  "data": Object {
    "clearCompletedTodos": Object {
      "clientMutationId": "7",
      "deletedTodoIds": Array [
        "VG9kbzoxNg==",
        "VG9kbzoxNw==",
        "VG9kbzoxOA==",
      ],
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjo5",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 15`] = `
Object {
  "data": Object {
    "renameTodo": Object {
      "clientMutationId": "9 0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxNg==",
        "text": "",
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 16`] = `
Object {
  "data": Object {
    "renameTodo": Object {
      "clientMutationId": "9 1",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxNw==",
        "text": "",
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 17`] = `
Object {
  "data": Object {
    "renameTodo": Object {
      "clientMutationId": "9 2",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxOA==",
        "text": "",
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 18`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`Todos GraphQL Query & Mutation 19`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`Todos GraphQL Query & Mutation 20`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;
